--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,7 @@
-.centered-image {
-  text-align: center;
-}
-.centered-image img {
+.center-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 100%;
   height: auto;
 }
-
