--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,22 @@
+/* Set black background */
+body {
+  background-color: #000;
+  color: #fff;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+/* Center image class */
 .center-img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
   height: auto;
+  padding-top: 2rem;
 }
+
 
 <!DOCTYPE html>
 <html lang="en">
